--- a/ForensicsSiteCSS.css
+++ b/ForensicsSiteCSS.css
@@ -1,53 +1,114 @@
+/*---------------------------------------------------------------------------HEADER---------------------------------------------------------------------------*/
+
 /* Style the header with a grey background and some padding */
 .header {
     overflow: hidden;
-    background-color: #f1f1f1;
-    padding: 20px 10px;
-  }
-  
-  /* Style the header links */
-  .header a {
-    float: left;
-    color: black;
+    background-color: #3e4044;
+    padding: 10px;
+}
+
+.backgroundImage {
+    background-image: url("SiteImages/fingerprint.jpeg");
+    background-repeat: no-repeat;  
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    margin-left: 0px;
+    margin-right: 0px;
+    opacity: .95;
+}
+
+.backgroundTextColor {
+    background-color: rgba(0, 0, 0, .819);
+    background-attachment:fixed;
+    background-size: cover;
     text-align: center;
-    padding: 12px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 135px;
+}
+
+.backgroundText {
+    font-family: Futura;
+    font-style: italic;
+    font-size: 60px;
+    color: white;
+}
+
+/* Style the header links */
+.header a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 20px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 25px;
     border-radius: 4px;
-  }
-  
-  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-  .header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  /* Change the background color on mouse-over */
-  .header a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the active/current link*/
-  .header a.active {
-    background-color: dodgerblue;
+    font-family: Arial; 
+}
+
+.header a:hover {
+    text-decoration: underline;
+}
+
+/* Style the active/current link*/
+.header a:after {
     color: white;
-  }
-  
-  /* Float the link section to the right */
-  .header-right {
-    float: right;
-  }
-  
-  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-  @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .header-right {
-      float: none;
-    }
-  }
+    text-decoration: underline;
+}
+
+.CreativityCode {
+    text-align: center;
+    background-color:#3e4044;
+    color: white;
+    font-family: Futura;
+    font-style: italic;
+    font-size: 40px;
+    padding: 40px;
+}
+
+.CreativityCode p {
+    font-family: Arial;
+    font-size: 20px;
+    text-align: center;
+    color: white;
+    font-style:normal;
+    padding: 30px;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 810px) {
+.header a {
+    float: none;
+    display: block;
+    text-align: center;
+    line-height: 40px;
+}
+
+.header a.logo {
+    line-height: 70px;
+}
+
+.header-right {
+    float: none;
+}
+
+.header a:hover {
+    background-color: rgba(255, 255, 255, 0.26); 
+}
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+
+@media screen and (max-width: 810px) {
+
+.backgroundImage {
+    display: none;
+}
+
+.header-right {
+    margin-top: 0px;
+}
+
+}
